<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General App related Strings -->
    <string name="app_name">Home Movies</string>

    <!-- Button names related Strings -->
    <!-- General buttons -->
    <string name="btnLableCancel">Cancel</string>
    <string name="btnLableDelete">Delete</string>
    <string name="btnLableCommit">Save</string>

    <!-- Main screen buttons -->
    <string name="btnLableMainSettings">Settings</string>
    <string name="btnLableMainSearch">Search</string>
    <string name="btnLableMainAdd">Add Note</string>
    <!-- Edit screen buttons -->
    <string name="btnLableEditShow">Show Image</string>
    <!-- Web screen buttons -->
    <string name="btnLableWebSearchGo">Go</string>

    <!-- Label names related Strings -->
    <!-- Screen Main label -->
    <string name="note_application">My Movies</string>

    <!-- Screen Edit label -->
    <string name="labelSubject">Subject:</string>
    <string name="labelBody">Body:</string>
    <string name="labelURL">URL:</string>

    <!-- Screen Web label -->
    <string name="labelSearch">Search:</string>

    <!-- System Notice related Strings -->
    <string name="systemNoticeTitle">System Notice</string>
    <string name="systemNoticeMsg">No Items to display, press the Add Button to add a new Item</string>
    <string name="systemNoticeButton">OK</string>

    <!-- Adding Method Selection -->
    <string name="AddingDialogMsg">Choose how to add an Item</string>
    <string name="AddingDialogLocal">Manually</string>
    <string name="AddingDialogWeb">Web Search</string>
    <string name="AddingDialogCancel">Cancel</string>

    <!-- Share Selection -->
    <string name="ShareDialogTitle">Share</string>
    <string name="ShareDialogEmail">Click to Mail</string>
    <string name="ShareDialogFaceBook">Click to Post</string>
    <string name="ShareDialogTweeter">Click to Tweet</string>

    <!-- Rank Selection -->
    <string name="RankDialogTitle">Rank</string>
    <string name="RankDialogMsg">Set Item rank</string>

    <!-- Image Description -->
    <string name="DescriptionImagePlaceHolder">Image PlaceHolder</string>
    <string name="DescriptionAirMail">Air Mail</string>
    <string name="DescriptionFaceBook">FaceBook</string>
    <string name="DescriptionTweeter">Tweeter</string>
    <string name="DescriptionCamera">Camera</string>
    <string name="DescriptionGallery">Gallery</string>
    <string name="ErrorMsgDownLoadWeb">Problem downloading info. Try again later</string>
    <string name="ErrorMsgTextToSpeech">This Language is currently not supported on this device, see the device settings for a list of available language</string>

    <!-- Menu String Elements -->
    <!-- ScreenMain Option -->
    <string name="lableScreenMainOptionMenuExitSettings">Exit</string>
    <string name="lableScreenMainOptionMenuDeletAllIteams">Delet All Iteams</string>
    <string name="lableScreenMainOptionMenuSearch">Search</string>
    <string name="lableScreenMainOptionMenuSettings">Settings</string>
    <string name="lableScreenMainOptionMenuSendLog">Send Log</string>
    <!-- ScreenMain Context -->
    <string name="lableScreenMainContextMenuEdit">Edit</string>
    <string name="lableScreenMainContextMenuShare">Share</string>
    <string name="lableScreenMainContextMenuRank">Rank Film</string>
    <string name="lableScreenMainContextMenuDelete">Delete</string>
    <!-- ScreenEdit Option -->
    <string name="lableScreenEditOptionMenuShare">Share</string>
    <string name="lableScreenEditOptionMenuSpeach">Speech</string>
    <!-- ScreenEdit Context -->
    <string name="lableScreenEditContextMenuShare">Share</string>
    <string name="lableScreenEditContextMenuRank">Rank Film</string>
    <string name="lableScreenEditContextMenuSeen">Seen</string>
    <string name="lableScreenEditContextMenuSaveToCard">Save Picture</string>
    <!-- ScreenWeb Option -->
    <string name="lableScreenWebOptionMenuExitSettings">Exit</string>
    <string name="lableScreenWebOptionMenuSettings">Settings</string>

    <!-- Mincs -->
    <string name="ScreenEditHint">Default value</string>
    <string name="checkBoxLableScreenEdit">Seen this film</string>
    <string name="rowHolderText">Rihanna Love the way lie Rihanna Love the way lie</string>
    <string name="rowIconDescription">Icon Description</string>
    <!-- - Preference Strings - -->
    <!-- Preference Category -->
    <string name="preferenceCategoryTitle1">Personal Settings</string>
    <!-- Preference Subject -->
    <string name="preferenceSubjectTitle">Subject</string>
    <string name="preferenceSubjectSummary">Set Default Topic</string>
    <string name="preferenceSubjectDefaultValue">Default value</string>
    <!-- Preference Email -->
    <string name="preferenceEmailTitle">Email</string>
    <string name="preferenceEmailSummary">Set Default email</string>
    <string name="preferenceEmailDefaultValue">John.Appleseed@iCloud.com</string>

    <!-- Preference Language -->
    <string name="preferenceLanguageTitle">Language</string>
    <string name="preferenceLanguageSummary">Select language</string>
    <string name="preferenceLanguageDefaultValue">en</string>

    <!-- Preference Strings -->
    <string name="preferenceCategoryTitle2">List Settings</string>
    <!-- Preference SortMethods -->
    <string name="preferenceSortMethodsTitle">Sort Method</string>
    <string name="preferenceSortMethodsSummary">Select Sort Method</string>
    <string name="preferenceSortMethodsDefaultValue">0</string>
    <!-- Preference EnableColor -->
    <string name="preferenceEnableColorTitle">Enable Color</string>
    <string name="preferenceEnableColorSummary">Enable Background Coloring of the film list</string>
    <string name="preferenceEnableColorDefaultValue">Yes</string>
    <!-- Preference EnablePreview -->
    <string name="preferenceEnablePreviewTitle">Enable Preview</string>
    <string name="preferenceEnablePreviewSummary">Show film icons</string>
    <string name="preferenceEnablePreviewDefaultValue">Yes</string>
    
    <!-- Preference Strings -->
    <string name="preferenceCategoryTitle3">Log Settings</string>
    <!-- Preference EnableLog -->
    <string name="preferenceEnableLogTitle">Enable Log</string>
    <string name="preferenceEnableLogSummary">Log operations, to sent to developer</string>
    <string name="preferenceEnableLogDefaultValue">no</string>
    <!-- Preference EnableClearLog -->
    <string name="preferenceEnableClearLogTitle">Log Operations</string>
    <string name="preferenceEnableClearLogSummary">Uncheck to clear database</string>
    <string name="preferenceEnableClearLogDefaultValue">no</string>

</resources>