<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/screenMainOptionMenuExitSettings"
        android:orderInCategory="10"
        android:title="@string/lableScreenMainOptionMenuExitSettings"/>
    <item
        android:id="@+id/screenMainOptionMenuDeletAllIteams"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="20"
        android:title="@string/lableScreenMainOptionMenuDeletAllIteams"/>
    <item
        android:id="@+id/screenMainOptionMenuSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="30"
        android:title="@string/lableScreenMainOptionMenuSearch"/>
    <item
        android:id="@+id/screenMainOptionMenuSendLog"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="40"
        android:title="@string/lableScreenMainOptionMenuSendLog"/>
    <item
        android:id="@+id/screenMainOptionMenuSettings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/lableScreenMainOptionMenuSettings"/>

</menu>